# clipboard-hack

./: .gitignore  Cargo.toml  DESIGN.md  Makefile
assets/: clipboard-hack.desktop
src/: app.rs  clipboard_backend.rs  history.rs  hotkey.rs  main.rs  window_state.rs
src/interpreter/: color.rs  filepath.rs  hex.rs  mod.rs  uuid.rs
