[package]
name = "clipboard-hack"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29"
egui = "0.29"
arboard = "3"
rdev = "0.5"
uuid = "1"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true

# Linux: requires libxtst-dev and libx11-dev
# macOS: requires Accessibility permission in System Preferences
